tests/msk/mskvpcconnection/00-mskvpcconnection-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mskvpcconnection
